Update template files

--- a/src/templates/components/navigation.pug
+++ b/src/templates/components/navigation.pug
@@ -1,13 +1,12 @@
-ul
-  li
-    a(href="/")= dic.t('nav.HOME')
-  li
-    a(href="/coffee-beans")= dic.t('nav.COFFEE_BEANS')
-  li
-    a(href="/beverages")= dic.t('nav.BEVERAGES')
-  li
-    a(href="/foods")= dic.t('nav.FOODS')
-  li
-    a(href="/goods")= dic.t('nav.GOODS')
-  li
-    a(href="/knowledge")= dic.t('nav.KNOWLEDGE')
+nav.navigation
+  ul
+    li
+      a(href="/coffee-beans")= dic.t('nav.BEANS')
+    li
+      a(href="/beverages")= dic.t('nav.BEVERAGES')
+    li
+      a(href="/foods")= dic.t('nav.FOODS')
+    li
+      a(href="/goods")= dic.t('nav.GOODS')
+    li
+      a(href="/knowledge")= dic.t('nav.KNOWLEDGE')
