--- a/src/templates/pages/beans.pug
+++ b/src/templates/pages/beans.pug
@@ -1,7 +1,7 @@
 extends /layouts/index
 
 block vars
-  - const title = dic.t('nav.COFFEE_BEANS');
+  - const title = dic.t('nav.BEANS');
 
 block meta
   title= title
