--- a/src/templates/layouts/index.pug
+++ b/src/templates/layouts/index.pug
@@ -9,6 +9,8 @@ html(lang=dic.lang)
     meta(name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=yes, viewport-fit=cover")
     link(rel="manifest" href="/manifest.json")
     link(rel="stylesheet" href="/styles/index.css")
+    script
+      include /layouts/service-worker.js
     block meta
   body
     block body
