--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -1,15 +1,18 @@
+@import 'vars';
+
 html {
   font-family: 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   line-height: 1.6;
   width: 100%;
-  height: 100%;
+  color: $color-text;
+  text-align: justify;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   width: 100%;
-  height: 100%;
   user-select: none;
 }
 
