--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -3,7 +3,7 @@
 .header {
   position: relative;
   text-align: center;
-  padding: 16px 0;
+  padding: 24px 0 16px;
 
   h1 {
     display: inline-block;
