Adjest style for home page

--- a/src/templates/components/navigation.pug
+++ b/src/templates/components/navigation.pug
@@ -1,7 +1,7 @@
 nav.navigation
   ul
     li
-      a(href="/coffee-beans")= dic.t('nav.BEANS')
+      a(href="/beans")= dic.t('nav.BEANS')
     li
       a(href="/beverages")= dic.t('nav.BEVERAGES')
     li
