--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -5,14 +5,28 @@
   text-align: center;
   padding: 24px 0 16px;
 
-  h1 {
+  a {
     display: inline-block;
-    font-weight: $font-bold;
-    letter-spacing: -1px;
-    font-size: 0.5rem;
-    width: 3rem;
-    padding: 8px 0;
-    line-height: 1.2;
-    border: solid 2px $color-text;
+    opacity: 1;
+    transition: opacity 200ms ease-out;
+
+    &:hover {
+      opacity: 0.8;
+    }
+
+    &:active {
+      background-color: $color-active;
+    }
+
+    h1 {
+      display: inline-block;
+      font-weight: $font-bold;
+      letter-spacing: -1px;
+      font-size: 0.5rem;
+      width: 3rem;
+      padding: 8px 0;
+      line-height: 1.2;
+      border: solid 2px $color-text;
+    }
   }
 }
