--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -8,6 +8,8 @@ html {
   width: 100%;
   color: $color-text;
   text-align: justify;
+  font-size: 16px;
+  font-weight: $font-regular;
   -webkit-tap-highlight-color: transparent;
 }
 
