--- a/src/templates/pages/home.pug
+++ b/src/templates/pages/home.pug
@@ -1,22 +1,38 @@
 extends /layouts/index
 
+block import
+  include /components/header
+  include /components/navigation
+  include /components/img
+  include /components/story-card
+
 block vars
   - const title = dic.t('nav.HOME');
 
 block meta
   title= title
+  meta(name="description" content=title)
   link(rel="stylesheet" href="/styles/pages/home/index.css")
 
 block body
   .home
-    include /components/header
-    include /components/navigation
+    +header(lang)
+    +navigation(path, dic)
+
     a.home--cover-story(href=`/posts/${featuredPost.id}`)
       .home--cover-story--content
         .home--cover-story--content--image
-          .img: img(src=featuredPost.thumbnailUrl)
+          +img(featuredPost.thumbnailUrl, featuredPost.title)
           .home--cover-story--content--image--cover
-        .home--cover-story--content--title= featuredPost.title
-    each post in posts
-      a(href=`/posts/${post.id}`)
-        li= post.title
+          .home--cover-story--content--title
+            = featuredPost.title
+            br
+            .home--cover-story--content--title--date= featuredPost.publishedAt
+
+    .home--heading= dic.t('home.LATEST_ARTICLES')
+
+    ul.home--story-list
+      each post in posts
+        li.home--story-list--item
+          a.home--story-list--item--link(href=`/posts/${post.id}`)
+            +story-card(post)
