--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -3,9 +3,42 @@
 .header {
   position: relative;
   text-align: center;
-  padding: 24px 0 16px;
+  padding: 36px 0 16px;
 
-  a {
+  .header--lang-list {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px;
+    height: 13px;
+    line-height: 13px;
+    vertical-align: top;
+    color: $color-text-secondary;
+
+    .header--lang-list--item {
+      display: inline-block;
+      font-size: 0.75rem;
+      line-height: 13px;
+      vertical-align: top;
+
+      & + .header--lang-list--item {
+        &::before {
+          font-weight: $font-regular;
+          display: inline-block;
+          content: '/';
+          padding: 0 2px;
+          color: $color-text-secondary;
+        }
+      }
+
+      &.header--lang-list--item__active {
+        font-weight: $font-bold;
+        color: $color-text;
+      }
+    }
+  }
+
+  .header--link {
     display: inline-block;
     opacity: 1;
     transition: opacity 200ms ease-out;
@@ -18,15 +51,25 @@
       background-color: $color-active;
     }
 
-    h1 {
+    .header--logo {
+      $size: 56px;
+
+      position: relative;
       display: inline-block;
       font-weight: $font-bold;
-      letter-spacing: -1px;
       font-size: 0.5rem;
-      width: 3rem;
-      padding: 8px 0;
+      text-align: left;
+      width: $size;
+      height: $size;
       line-height: 1.2;
       border: solid 2px $color-text;
+
+      .header--logo--text {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
     }
   }
 }
