--- a/src/styles/components/navigation.css
+++ b/src/styles/components/navigation.css
@@ -1,7 +1,7 @@
 @import 'vars';
 
 .navigation {
-  ul {
+  .navigation--list {
     max-width: $width-content;
     margin: 0 auto;
     display: flex;
@@ -10,18 +10,32 @@
     align-content: stretch;
     width: 100%;
 
-    li {
+    .navigation--list--item {
       flex: 1;
       align-self: center;
       display: inline-block;
       text-align: center;
+      font-weight: $font-bold;
 
-      a {
+      &.navigation--list--item__active {
+        position: relative;
+
+        &:after {
+          position: absolute;
+          content: '';
+          display: inline-block;
+          bottom: 0;
+          left: 0;
+          width: 100%;
+          height: 4px;
+          background-color: $color-text-secondary;
+        }
+      }
+
+      .navigation--list--item--link {
         display: inline-block;
         width: 100%;
         height: 100%;
-        text-decoration: none;
-        font-weight: $font-bold;
         padding: 16px 0;
         color: inherit;
         font-size: 0.6rem;
