--- a/src/styles/application.css
+++ b/src/styles/application.css
@@ -1,7 +1,7 @@
 @import 'vars';
 
 html {
-  font-family: 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+  font-family: 'Helvetica', 'Hiragino Kaku Gothic ProN', sans-serif;
   font-smoothing: antialiased;
   -webkit-font-smoothing: antialiased;
   line-height: 1.6;
