Adjust navigation text and style

--- a/src/templates/pages/home.pug
+++ b/src/templates/pages/home.pug
@@ -7,7 +7,7 @@ block import
   include /components/story-card
 
 block vars
-  - const title = dic.t('nav.HOME');
+  - const title = dic.t('navigation.HOME');
 
 block meta
   title= title
