Use footer component for home page

--- a/src/styles/pages/home/index.css
+++ b/src/styles/pages/home/index.css
@@ -1,5 +1,6 @@
 @import 'vars';
 @import 'components/header';
+@import 'components/footer';
 @import 'components/navigation';
 @import 'components/img';
 @import 'components/story-card';
