--- a/src/templates/components/story-card.pug
+++ b/src/templates/components/story-card.pug
@@ -1,6 +1,8 @@
 mixin story-card(post)
+  include /components/img
+
   .story-card
     .story-card--thumbnail
-      +img(post.thumbnailUrl, post.title)
+      +img(post.thumbnailUrl.rectangle, post.title)
     .story-card--date= post.publishedAt
     .story-card--title= post.title
