--- a/src/templates/components/img.pug
+++ b/src/templates/components/img.pug
@@ -1,3 +1,3 @@
 mixin img(src, alt)
   .img
-    img(src=src alt=alt)
+    img(src=src alt=alt onload="((event) => event.currentTarget.parentNode.style.background = 'none')(event)")
