--- a/src/styles/pages/home/index.css
+++ b/src/styles/pages/home/index.css
@@ -96,6 +96,12 @@
       padding: 0 8px;
 
       .home--story-list--item--link {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        transition: opacity 200ms ease-out;
+
         &:hover {
           opacity: 0.8;
         }
