--- a/src/templates/components/footer.pug
+++ b/src/templates/components/footer.pug
@@ -2,7 +2,7 @@ mixin footer(lang)
   footer.footer
     ul.footer--list
       li.footer--list--item
-        a(href="/")= dic.t('footer.ABOUT_US')
+        a(href="/about-us")= dic.t('footer.ABOUT_US')
       li.footer--list--item
         a(href="/")= dic.t('footer.SITEMAP')
     p.footer--copyright &copy; ABOUT OUR COFFEE, All rights reserved.
