Define vars for web site

--- a/src/templates/layouts/index.pug
+++ b/src/templates/layouts/index.pug
@@ -4,6 +4,13 @@ block import
 
 block vars
 
+- const url = 'https://test.com';
+- const siteName = 'ABOUT OUR COFFEE';
+- const facebookAppId = 'test id';
+- const facebookPageUrl = 'facebook url';
+- const twitterCardType = 'twitter card type';
+- const twitterAccount = '@';
+
 html(lang=dic.lang)
   head
     meta(charset="utf-8")
