--- a/src/templates/layouts/index.pug
+++ b/src/templates/layouts/index.pug
@@ -18,6 +18,28 @@ html(lang=dic.lang)
     meta(name="viewport" content="width=device-width, height=device-height, initial-scale=1, maximum-scale=5, minimum-scale=1, user-scalable=yes, viewport-fit=cover")
     link(rel="manifest" href="/manifest.json")
     link(rel="stylesheet" href="/styles/index.css")
+
+    title= title
+    meta(name="description" content=description)
+
+    //- OGP
+    meta(property="og:site_name" content=siteName)
+    meta(property="og:title" content=title)
+    meta(property="og:type" content=type)
+    meta(property="og:url" content=`${url}${path}?lang=${lang}`)
+    meta(property="og:image" content=thumbnailUrl)
+    meta(property="og:description" content=description)
+    //- Facebook
+    meta(property="fb:app_id" content=facebookAppId)
+    meta(property="article:publisher" content=facebookPageUrl)
+    //- Twitter
+    meta(property="twitter:card" content=twitterCardType)
+    meta(property="twitter:site" content=twitterAccount)
+    meta(property="twitter:title" content=title)
+    meta(property="twitter:url" content=`${url}${path}?lang={lang}`)
+    meta(property="twitter:description" content=description)
+    meta(property="twitter:image" content=thumbnailUrl)
+
     script
       include /layouts/service-worker.js
     block meta
