Implement Picture component

--- a/src/presentations/components/Picture.css
+++ b/src/presentations/components/Picture.css
@@ -23,6 +23,10 @@
     object-fit: cover;
   }
 
+  &.Picture__Ready {
+    background: $color-shadow;
+  }
+
   &.Picture__Loaded {
     background: none;
   }
