--- a/src/presentations/pages/Home/index.pug
+++ b/src/presentations/pages/Home/index.pug
@@ -8,7 +8,7 @@ block import
   include /components/StoryCard
 
 block meta
-  script(src="/pages/home/bundle.js")
+  script(src="/pages/home/bundle.js" defer)
   link(rel="stylesheet" href="/pages/home/index.css")
 
 block body
