--- a/src/presentations/pages/Home/index.pug
+++ b/src/presentations/pages/Home/index.pug
@@ -8,8 +8,8 @@ block import
   include /components/StoryCard
 
 block meta
-  script(src="/pages/home/bundle.js" defer)
-  link(rel="stylesheet" href="/pages/home/index.css")
+  script(src="/pages/Home/bundle.js" defer)
+  link(rel="stylesheet" href="/pages/Home/index.css")
 
 block body
   .Home
