Remove a link to beans

--- a/src/presentations/components/Navigation.pug
+++ b/src/presentations/components/Navigation.pug
@@ -5,8 +5,8 @@ mixin Navigation(path, dic)
         a.Navigation--List--Item--Link(href="/beverages")= dic.t('navigation.BEVERAGES')
       li.Navigation--List--Item(class= path === '/foods' ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/foods")= dic.t('navigation.FOODS')
-      li.Navigation--List--Item(class= path === '/beans' ? 'Navigation--List--Item__Active' : '')
-        a.Navigation--List--Item--Link(href="/beans")= dic.t('navigation.BEANS')
+      //- li.Navigation--List--Item(class= path === '/beans' ? 'Navigation--List--Item__Active' : '')
+      //-   a.Navigation--List--Item--Link(href="/beans")= dic.t('navigation.BEANS')
       li.Navigation--List--Item(class= path === '/goods' ? 'Navigation--List--Item__Active' : '')
         a.Navigation--List--Item--Link(href="/goods")= dic.t('navigation.GOODS')
       li.Navigation--List--Item(class= path === '/knowledge' ? 'Navigation--List--Item__Active' : '')
