Adjust styling for components

--- a/src/presentations/components/Navigation.css
+++ b/src/presentations/components/Navigation.css
@@ -1,6 +1,8 @@
 @import 'application/vars';
 
 .Navigation {
+  box-shadow: $shadow;
+
   .Navigation--List {
     max-width: $width-content;
     margin: 0 auto;
