--- a/src/presentations/components/Header.css
+++ b/src/presentations/components/Header.css
@@ -4,6 +4,7 @@
   position: relative;
   text-align: center;
   padding: 36px 0 16px;
+  background-color: $color-white;
 
   .Header--LangList {
     position: absolute;
