--- a/src/presentations/pages/Home/index.css
+++ b/src/presentations/pages/Home/index.css
@@ -6,6 +6,8 @@
 @import 'components/StoryCard';
 
 .Home {
+  background-color: $color-background;
+
   .Home--CoverStory {
     display: inline-block;
     width: 100%;
@@ -71,50 +73,54 @@
     }
   }
 
-  .Home--Heading {
-    font-weight: $font-bold;
-    padding: 48px 8px 12px;
-    margin: 0 auto;
-    max-width: $width-content;
-  }
+  .Home--Content {
+    background-color: $color-white;
 
-  .Home--StoryList {
-    width: 100%;
-    max-width: $width-content;
-    margin: 0 auto;
+    .Home--Content--Heading {
+      font-weight: $font-bold;
+      padding: 48px 8px 12px;
+      margin: 0 auto;
+      max-width: $width-content;
+    }
 
-    .Home--StoryList--Item {
-      display: inline-block;
-      width: calc(100% / 1);
-      vertical-align: top;
-      padding: 0 8px;
+    .Home--Content--StoryList {
+      width: 100%;
+      max-width: $width-content;
+      margin: 0 auto;
 
-      .Home--StoryList--Item--Link {
+      .Home--Content--StoryList--Item {
         display: inline-block;
-        width: 100%;
-        height: 100%;
-        opacity: 1;
-        transition: opacity 200ms ease-out;
+        width: calc(100% / 1);
+        vertical-align: top;
+        padding: 0 8px;
 
-        &:hover {
-          opacity: 0.8;
-        }
+        .Home--Content--StoryList--Item--Link {
+          display: inline-block;
+          width: 100%;
+          height: 100%;
+          opacity: 1;
+          transition: opacity 200ms ease-out;
 
-        &:active {
-          background-color: $color-active;
+          &:hover {
+            opacity: 0.8;
+          }
+
+          &:active {
+            background-color: $color-active;
+          }
         }
       }
-    }
 
-    @media screen and (min-width: calc($width-content / 2)) {
-      .Home--StoryList--Item {
-        width: calc(100% / 2);
+      @media screen and (min-width: calc($width-content / 2)) {
+        .Home--Content--StoryList--Item {
+          width: calc(100% / 2);
+        }
       }
-    }
 
-    @media screen and (min-width: calc($width-content / 4 * 3)) {
-      .Home--StoryList--Item {
-        width: calc(100% / 3);
+      @media screen and (min-width: calc($width-content / 4 * 3)) {
+        .Home--Content--StoryList--Item {
+          width: calc(100% / 3);
+        }
       }
     }
   }
