Adjust navigation style

--- a/src/presentations/components/Navigation.css
+++ b/src/presentations/components/Navigation.css
@@ -1,6 +1,8 @@
 @import 'application/vars';
 
 .Navigation {
+  position: relative;
+  z-index: 2;
   background-color: $color-white;
   box-shadow: $shadow;
 
