--- a/src/presentations/application/vars.css
+++ b/src/presentations/application/vars.css
@@ -8,6 +8,9 @@ $color-shadow: rgba(0, 0, 0, 0.12);
 $color-divider: #e0e0e0;
 $color-active: rgba(0, 0, 0, 0.04);
 
+$color-hot: #ef5350;
+$color-iced: #42a5f5;
+
 $radius: 2px;
 $shadow: 0 1px 1px 0 $color-shadow;
 $shadow-inset: 0 1px 1px 0 $color-shadow inset;
