--- a/src/presentations/pages/Beverages/index.css
+++ b/src/presentations/pages/Beverages/index.css
@@ -2,59 +2,90 @@
 @import 'components/Header';
 @import 'components/Footer';
 @import 'components/Navigation';
-@import 'components/StoryCard';
 
 .Beverages {
   background-color: $color-background;
 
   .Beverages--Content {
-    max-width: $width-content;
+    max-width: calc($width-content * 3 / 4);
     margin: 0 auto;
-    padding: 24px 0;
+
+    .Beverages--Content--CategoryTitle {
+      position: relative;
+      font-weight: $font-bold;
+      text-align: center;
+      margin: 36px auto;
+      text-align: center;
+
+      h2 {
+        display: inline-block;
+        font-size: 1.75rem;
+        border-bottom: solid 4px $color-divider;
+      }
+    }
 
     .Beverages--Content--List {
-      width: 100%;
-      max-width: $width-content;
-      margin: 0 auto;
-
       .Beverages--Content--List--Item {
-        display: inline-block;
-        width: calc(100% / 2);
-        vertical-align: top;
-        padding: 0 8px;
+        display: flex;
+        padding: 16px 12px 36px;
 
-        .Beverages--Content--List--Item--Picture {
-          display: inline-block;
-          width: 100%;
-          vertical-align: top;
+        .Beverages--Content--List--Item--Title {
+          flex: 1;
+          font-size: 1.25rem;
+          font-weight: $font-bold;
+          word-break: break-all;
+        }
 
-          .Picture {
-            padding-top: 100%;
+        .Beverages--Content--List--Item--RecipeList {
+          .Beverages--Content--List--Item--RecipeList--Item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            & + .Beverages--Content--List--Item--RecipeList--Item {
+              margin-top: 12px;
+            }
+
+            .Beverages--Content--List--Item--RecipeList--Item--Hot,
+            .Beverages--Content--List--Item--RecipeList--Item--Iced {
+              position: relative;
+              display: inline-block;
+              color: $color-text-secondary;
+              width: 4rem;
+              padding-left: 1rem;
+
+              &:before {
+                position: absolute;
+                top: 47%;
+                left: 0.25rem;
+                transform: translateY(-50%);
+                content: '';
+                display: inline-block;
+                width: 0.5rem;
+                height: 0.5rem;
+                border-radius: 50%;
+              }
+            }
+
+            .Beverages--Content--List--Item--RecipeList--Item--Link {
+              display: inline-block;
+              color: $color-white;
+              background-color: $color-text;
+              padding: 8px 24px;
+              width: 6rem;
+              font-size: 0.75rem;
+              text-align: center;
+              border-radius: 17px;
+            }
+
+            .Beverages--Content--List--Item--RecipeList--Item--Hot:before {
+              background-color: $color-hot;
+            }
+
+            .Beverages--Content--List--Item--RecipeList--Item--Iced:before {
+              background-color: $color-iced;
+            }
           }
-        }
-
-        .Beverages--Content--List--Item--Info {
-          display: inline-block;
-          width: 100%;
-          padding: 8px 0 48px;
-          vertical-align: top;
-
-          .Beverages--Content--List--Item--Info--Title {
-            font-weight: $font-bold;
-            font-size: 1rem;
-          }
-        }
-      }
-
-      @media screen and (min-width: calc($width-content / 2)) {
-        .Beverages--Content--List--Item {
-          width: calc(100% / 3);
-        }
-      }
-
-      @media screen and (min-width: calc($width-content / 4 * 3)) {
-        .Beverages--Content--List--Item {
-          width: calc(100% / 4);
         }
       }
     }
