--- a/src/presentations/application/vars.css
+++ b/src/presentations/application/vars.css
@@ -1,12 +1,12 @@
 $color-white: #fff;
 
-$color-text: #424242;
-$color-text-secondary: #757575;
-$color-text-hint: #9e9e9e;
-$color-background: #fafafa;
+$color-text: rgba(0, 0, 0, 0.87);
+$color-text-secondary: rgba(0, 0, 0, 0.6);
+$color-text-hint: rgba(0, 0, 0, 0.38);
 $color-shadow: rgba(0, 0, 0, 0.12);
-$color-divider: #e0e0e0;
 $color-active: rgba(0, 0, 0, 0.04);
+$color-background: #fafafa;
+$color-divider: #e0e0e0;
 
 $color-hot: #ef5350;
 $color-iced: #42a5f5;
