--- a/src/presentations/components/Navigation.css
+++ b/src/presentations/components/Navigation.css
@@ -21,9 +21,11 @@
       display: inline-block;
       text-align: center;
       font-weight: $font-bold;
+      color: $color-text-secondary;
 
       &.Navigation--List--Item__Active {
         position: relative;
+        color: $color-text;
 
         &:after {
           position: absolute;
@@ -32,7 +34,7 @@
           bottom: 0;
           left: 0;
           width: 100%;
-          height: 4px;
+          height: 1px;
           background-color: $color-text-secondary;
         }
       }
