Update Foods page

--- a/src/presentations/pages/Foods/index.pug
+++ b/src/presentations/pages/Foods/index.pug
@@ -12,5 +12,14 @@ block body
   .Foods
     +Header(lang)
     +Navigation(path, dic)
-    h1= title
+    .Foods--Content
+      .Foods--Content--CategoryTitle
+        h2 FOODS
+      .Foods--Content--List
+        .Foods--Content--List--Item
+          .Foods--Content--List--Item--Title MADELEINE
+          .Foods--Content--List--Item--RecipeList
+            .Foods--Content--List--Item--RecipeList--Item
+              .Foods--Content--List--Item--RecipeList--Item--Link RECIPE
+      .Foods--Content--CategoryTitle
     +Footer(lang)
